--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,16 @@
   --mrgn-secondary: 30px;
   --lttr-spc-base: 0.03em;
   --lttr-spc-title: 0.06em;
+  --trans-actions: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
   font-family: "Roboto", "Raleway", sans-serif;
   background-color: var(--bg-cl-main);
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 h1,
@@ -100,6 +105,7 @@ header {
   color: var(--font-cl-main);
   letter-spacing: 0.02em;
   line-height: 1.14;
+  transition: color var(--trans-actions);
 }
 
 .navigation-link:hover,
@@ -109,10 +115,11 @@ header {
 }
 
 .current-link::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
-  top: 250%;
+  top: 248%;
+  left: 0;
   width: 100%;
   height: 4px;
   background-color: var(--cl-accent);
@@ -140,6 +147,7 @@ header {
   color: var(--font-cl-secondary);
   letter-spacing: 0.02em;
   line-height: 1.14;
+  transition: color var(--trans-actions);
 }
 
 .header-contact-link:hover,
@@ -149,7 +157,7 @@ header {
 
 .contact-icon {
   margin-right: 10px;
-  fill: var(--font-cl-secondary);
+  fill: currentColor;
 }
 
 .contact-icon:nth-child(1) {
@@ -158,11 +166,6 @@ header {
 
 .contact-icon:nth-child(2) {
   height: 16px;
-}
-
-.header-contact-item:hover .contact-icon,
-.header-contact-link:focus .contact-icon {
-  fill: var(--cl-accent);
 }
 
 .section {
@@ -210,6 +213,8 @@ header {
   letter-spacing: var(--lttr-spc-title);
   border-style: none;
   cursor: pointer;
+  transition: box-shadow var(--trans-actions),
+    border-radius var(--trans-actions);
 }
 
 .hero-button:hover,
@@ -289,13 +294,13 @@ header {
   margin-bottom: var(--mrgn-main);
 }
 
-.services-list {  
+.services-list {
   display: flex;
   justify-content: center;
 }
 
 .services-item {
-  margin-right: var(--mrgn-secondary);  
+  margin-right: var(--mrgn-secondary);
 }
 
 .services-item:last-child {
@@ -303,7 +308,7 @@ header {
 }
 
 .service-box {
-  position: relative;  
+  position: relative;
 }
 
 .service-photo {
@@ -315,15 +320,15 @@ header {
   bottom: 0;
   right: 0;
   width: 370px;
-  height: 70px;  
-  display: flex;  
+  height: 70px;
+  display: flex;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: var(--lttr-spc-base);
-  color: var(--font-cl-accent);  
+  color: var(--font-cl-accent);
   background-color: rgba(47, 48, 58, 0.8);
 }
 
@@ -385,23 +390,15 @@ header {
   height: 44px;
   align-items: center;
   justify-content: center;
-}
-
-.social-icon-link:hover,
-.social-icon-link:focus {
-  background-color: var(--cl-accent);
   border-radius: 50%;
+  color: var(--cl-icon-fill);
+  transition: background-color var(--trans-actions), color var(--trans-actions);
 }
 
 .social-icon {
   height: 20px;
   width: 20px;
-  fill: var(--cl-icon-fill);
-}
-
-.social-icon-link:hover .social-icon,
-.social-icon-link:focus .social-icon {
-  fill: var(--bg-cl-main);
+  fill: currentColor;
 }
 
 .clients-list {
@@ -421,22 +418,20 @@ header {
   border-radius: 4px;
   align-items: center;
   justify-content: center;
+  color: var(--cl-icon-fill);
+  transition: border-color var(--trans-actions), color var(--trans-actions);
 }
 
 .client-link:hover,
 .client-link:focus {
-  border-color: #2196f3;
+  border-color: var(--cl-accent);
+  color: var(--cl-accent);
 }
 
 .client-icon {
   width: 106px;
   height: 60px;
-  fill: var(--cl-icon-fill);
-}
-
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--cl-accent);
+  fill: currentColor;
 }
 
 .filters-list {
@@ -466,6 +461,8 @@ header {
   line-height: 1.63;
   letter-spacing: var(--lttr-spc-base);
   text-align: center;
+  transition: background-color var(--trans-actions),
+    box-shadow var(--trans-actions), color var(--trans-actions);
 }
 
 .current-btn,
@@ -485,7 +482,9 @@ header {
 }
 
 .product-link {
+  text-decoration: none;
   display: block;
+  transition: box-shadow var(--trans-actions);
 }
 
 .product-link:hover,
@@ -494,38 +493,34 @@ header {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.product-link:hover .product-card-thumb::before,
-.product-link:hover .product-desc,
-.product-link:focus .product-card-thumb::before,
-.product-link:focus .product-desc {
-  opacity: 1;
-}
-
-.product-card-thumb {
+.product-thumb {
   position: relative;
   height: 294px;
+  overflow: hidden;
 }
 
-.product-card-thumb::before {
-  display: block;
+.overlay {
   position: absolute;
-  content: '';  
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
+  transform: translateY(100%);
+  transition: transform var(--trans-actions);
+}
+
+.product-link:hover .overlay,
+.product-link:focus .overlay {
+  transform: translateY(0);
 }
 
 .product-desc {
-  position: absolute;
-  top: 63px;
-  left: 24px;
-  width: 322px;
+  padding: 63px 24px;
   font-size: 18px;
   line-height: calc(28 / 18);
   letter-spacing: var(--lttr-spc-base);
   color: var(--font-cl-accent);
-  opacity: 0;
 }
 
 .figurecaption {
@@ -602,6 +597,7 @@ header {
   font-size: var(--font-sz-base);
   line-height: 1.71;
   letter-spacing: var(--lttr-spc-base);
+  transition: color var(--trans-actions);
 }
 
 .footer-contact-link:hover,
@@ -630,9 +626,10 @@ header {
   border-radius: 50%;
 }
 
-.footer-social-link .social-icon-link:hover,
-.footer-social-link .social-icon-link:focus {
+.social-icon-link:hover,
+.social-icon-link:focus {
   background-color: var(--cl-accent);
+  color: var(--bg-cl-main);
 }
 
 .backdrop {
@@ -642,6 +639,9 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  visibility: initial;
+  opacity: 1;
+  transition: opacity var(--trans-actions), visibility var(--trans-actions);
 }
 
 .backdrop.is-hidden {
@@ -654,13 +654,22 @@ header {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
   background-color: var(--bg-cl-main);
+  visibility: inherit;
+  opacity: 1;
+  transform: translate(-50%, -50%) perspective(400px) rotateY(0);
+  transition: transform var(--trans-actions), opacity var(--trans-actions),
+    visibility var(--trans-actions);
 }
 
-.modal-btn {  
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-50%, -50%) perspective(400px) rotateY(180deg);
+}
+
+.modal-btn {
   position: absolute;
   top: 8px;
   right: 8px;
